add stop & shutdown buttons to web interface

--- a/html/index.html
+++ b/html/index.html
@@ -25,8 +25,9 @@
               <label for="ex1">Hauteur du texte (cm) :</label>
               <input id="taille" style='width: 200px; margin: auto;' type='number' class="form-control" onkeypress="if (event.keyCode==13) action();" value="10" placeholder="Hauteur du texte (cm)">
             </div>
-            <p><button onclick="action()" class="btn btn-success btn-lg">Action !!</button></p>
-            Tension de la batterie : <strong id="battery"></strong> Volts <button onclick="batteryUpdate()" class="btn btn-sm">Actualiser</button>
+            <p><button id="buttonAction" onclick="action()" class="btn btn-success btn-lg">Action !!</button></p>
+            <p>Tension de la batterie : <strong id="battery"></strong> Volts <button onclick="batteryUpdate()" class="btn btn-sm">Actualiser</button></p>
+            <button id="shutdownButton" onclick="shutdown()" class="btn btn-danger btn-sm">Éteindre le Raspberry Pi</button>
           </div>
         </div>
       </div>
