--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
   <title>ENSTAR - Robot de démonstration</title>
 </head>
 
-<body background="background.jpg" onload="document.getElementById('phrase').focus(); batteryUpdate()">
+<body background="background.jpg" onload="document.getElementById('phrase').focus(); batteryUpdate(); playtext('bienvenue, que puis-je écrire pour vous ?')">
   <div class="text-center d-flex h-100 align-items-center">
     <div class="container">
       <div class="row">
