--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
   <title>ENSTAR - Robot de démonstration</title>
 </head>
 
-<body background="background.jpg" onload="document.getElementById('phrase').focus(); batteryUpdate(); playtext('bienvenue, que puis-je écrire pour vous ?')">
+<body background="background.jpg" onload="document.getElementById('phrase').focus(); batteryUpdate(); playsound('surprised.mp3')">
   <div class="text-center d-flex h-100 align-items-center">
     <div class="container">
       <div class="row">
@@ -16,17 +16,20 @@
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="display-4 text-white">Que voulez-vous que j’écrive ?</h1>
+          <p>
+            <h1 class="text-white">Que voulez-vous que j’écrive ?</h1>
+          </p>
           <div class="col-md-12">
             <div class="form-group">
               <input id="phrase" class="form-control" onkeypress="if (event.keyCode==13) action();" placeholder="Votre phrase...">
             </div>
             <div class="form-group">
               <label for="ex1">Hauteur du texte (cm) :</label>
-              <input id="taille" style='width: 200px; margin: auto;' type='number' class="form-control" onkeypress="if (event.keyCode==13) action();" value="10" placeholder="Hauteur du texte (cm)">
+              <input id="taille" style="width: 200px; margin: auto;" type="number" class="form-control" onkeypress="if (event.keyCode==13) action();" value="10" placeholder="Hauteur du texte (cm)">
             </div>
             <p><button id="buttonAction" onclick="action()" class="btn btn-success btn-lg">Action !!</button></p>
             <p>Tension de la batterie : <strong id="battery"></strong> Volts <button onclick="batteryUpdate()" class="btn btn-sm">Actualiser</button></p>
+            <p><button class="btn btn-sm"><a href="command">Piloter le robot avec son smartphone</a></button></p>
             <button id="shutdownButton" onclick="shutdown()" class="btn btn-danger btn-sm">Éteindre le Raspberry Pi</button>
           </div>
         </div>
